--- a/ze/ze_events.yaml
+++ b/ze/ze_events.yaml
@@ -14,9 +14,13 @@ lttng_ust_ze_sampling:
     - [ ctf_integer, uint64_t, timestamp, "timestamp" ]
   - name: gpu_frequency
     args:
+    - [ ze_device_handle_t, hDevice ]
+    - [ uint32_t, domain]
     - [ uint64_t, timestamp ] 
     - [ uint64_t, frequency ]
     fields:
+    - [ ctf_integer_hex, uintptr_t, hDevice, "(uintptr_t)hDevice" ]
+    - [ ctf_integer, uint32_t, domain, "domain" ]
     - [ ctf_integer, uint64_t, timestamp, "timestamp" ]
     - [ ctf_integer, uint64_t, frequency, "frequency" ]
 lttng_ust_ze_profiling:
