Use interval to process frequency, and define new interval frequency event.

--- a/xprof/interval_model.yaml
+++ b/xprof/interval_model.yaml
@@ -53,4 +53,18 @@
   - :name: name
     :class: string
   - :name: size
-    :class: unsigned 
+    :class: unsigned
+- :name: lttng:frequency
+  :payload:
+  - :name: did
+    :class: unsigned
+    :class_properties:
+      :preferred_display_base: 16
+  - :name: domain
+    :class: unsigned
+    :class_properties:
+      :preferred_display_base: 16
+  - :name: frequency
+    :class: unsigned
+    :class_properties:
+      :preferred_display_base: 16
