--- a/xprof/interval_model.yaml
+++ b/xprof/interval_model.yaml
@@ -68,3 +68,18 @@
     :class: unsigned
     :class_properties:
       :preferred_display_base: 16
+- :name: lttng:energy
+  :payload:
+  - :name: did
+    :class: unsigned
+    :class_properties:
+      :preferred_display_base: 16
+  - :name: domain
+    :class: unsigned
+    :class_properties:
+      :preferred_display_base: 16
+  - :name: energy 
+    :class: unsigned
+    :class_properties:
+      :preferred_display_base: 16
+
