--- a/utils/babeltrace_thapi.in
+++ b/utils/babeltrace_thapi.in
@@ -89,15 +89,16 @@ module MyRefinement
       @cli_v << "--component #{name}:#{component_class.type.to_s.split('_').last.downcase}.#{component_class.plugin.name}.#{component_class.name}"
       str_params = params.filter_map { |k,v| "#{k}=#{v}" unless v.class == String && v.empty? }.join(",")
       @cli_v << "--params #{str_params.dump}" unless str_params.empty?
+      @once_source_ctf_fs = {}
       super
     end
 
     def connect_ports(upstream_port, downstream_port)
       # Work around for source.ctf.fs port
-      if upstream_port.component.name == "source_0"
-        if @once_source_ctf_fs
+      if upstream_port.component.name.start_with?("source_")
+        if !@once_source_ctf_fs[upstream_port.component.name]
           @cli_v << "--connect #{upstream_port.component.name}.*:#{downstream_port.component.name}.*"
-          @once_source_ctf_fs = false
+          @once_source_ctf_fs [upstream_port.component.name] = true
         end
       else
         @cli_v << "--connect #{upstream_port.component.name}.#{upstream_port.name}:#{downstream_port.component.name}.#{downstream_port.name}"
