--- a/xprof/xprof.sh.erb.in
+++ b/xprof/xprof.sh.erb.in
@@ -391,6 +391,7 @@ local_master_epilogue() {
     fi
     global_barrier_epilogue
     rm -rf -- "$SHARED_LOCAL_FILESYSTEM"
+    rm -rf -- "$LTTNG_HOME"
 }
 
 
@@ -402,7 +403,6 @@ local_master_epilogue() {
 trace_epilogue() {
     local_barier epilogue
     run_iff_local_master local_master_epilogue
-
     # All the traces have been saved. We can now do the move
     if [ $(mpi_rank_id) == 0 ]; then
         rm -rf -- "$SHARED_GLOBAL_FILESYSTEM"
@@ -410,7 +410,6 @@ trace_epilogue() {
         local new_output=${THAPI_LTTNG_O_ROOT/$(mpi_job_id)/$(date '+%Y%m%d-%H%M%S')}
         mv $THAPI_LTTNG_O_ROOT $new_output
         THAPI_LTTNG_O=$new_output
-        rm -rf $LTTNG_HOME
         summary
     fi
 }
