--- a/xprof/xprof.sh.erb.in
+++ b/xprof/xprof.sh.erb.in
@@ -387,7 +387,7 @@ local_master_epilogue() {
     lttngq stop THAPI_$(hostname)
     lttngq destroy THAPI_$(hostname)
     if [ ${1:-""} = "--live" ]; then
-        wait $BT_PID # Set setub_babeltrace_live
+        wait $BT_PID # assigned by setup_babeltrace_live
     fi
     global_barrier_epilogue
     rm -rf -- "$SHARED_LOCAL_FILESYSTEM"
@@ -487,9 +487,11 @@ summary() {
 #  |_ | \/ (/_
 #
 
-setub_babeltrace_live() {
-  mkdir -p $THAPI_LTTNG_O_ROOT
-  $bindir/babeltrace_thapi tally --live --backend <%= languages %> $bt_tally_argv -- "net://localhost/host/$(hostname)/THAPI_$(hostname)" > $THAPI_LTTNG_O_ROOT/tally_$(hostname)_$(hostname).log &
+setup_babeltrace_live() {
+  mkdir -p $THAPI_LTTNG_O
+  $bindir/babeltrace_thapi aggreg_live --backend <%= languages %> \
+                                       --inputs "net://localhost/host/$(hostname)/THAPI_$(hostname)"  \
+                                       --output $THAPI_LTTNG_O &
   BT_PID=$!
 }
 
@@ -504,12 +506,7 @@ trace_epilogue_live() {
         local new_output=${THAPI_LTTNG_O_ROOT/$(mpi_job_id)/$(date '+%Y%m%d-%H%M%S')}
         mv $THAPI_LTTNG_O_ROOT $new_output
         THAPI_LTTNG_O=$new_output
-
-        # All the traces have been moved. We can now print
-        for x in $(ls $THAPI_LTTNG_O/tally_*.log | sort -V || true); do
-           echo $x
-           cat $x
-        done
+        summary
     fi
 }
 
@@ -517,7 +514,7 @@ trace_and_summary_live() {
     [ "$#" -eq 0 ] && display_help
     # Each node will have their own lock
     run_iff_local_master setup_lttng --live
-    run_iff_local_master setub_babeltrace_live
+    run_iff_local_master setup_babeltrace_live
     local_barier setup
     # Create the metadata.
     # Read and dump `$LTTNG_UST_THAPI_METADATA` env
